--- a/hueplusplus/test/CMakeLists.txt
+++ b/hueplusplus/test/CMakeLists.txt
@@ -19,14 +19,14 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 
 # Add googletest directly to our build. This defines
 # the gtest and gtest_main targets.
-add_subdirectory(${CMAKE_BINARY_DIR}/googletest-src
-                 ${CMAKE_BINARY_DIR}/googletest-build)
+add_subdirectory(${CMAKE_BINARY_DIR}/googletest-src EXCLUDE_FROM_ALL
+                 ${CMAKE_BINARY_DIR}/googletest-build EXCLUDE_FROM_ALL)
 
 # The gtest/gtest_main targets carry header search path
 # dependencies automatically when using CMake 2.8.11 or
 # later. Otherwise we have to add them here ourselves.
 if (CMAKE_VERSION VERSION_LESS 2.8.11)
-    include_directories("${gtest_SOURCE_DIR}/include")
+    include_directories("${gtest_SOURCE_DIR}/include" EXCLUDE_FROM_ALL)
 endif()
 
 file(GLOB TEST_SOURCES test_*)
