Modify CMakeLists of test, so that coverage tests are possible, also add custom target for unittests

--- a/hueplusplus/test/CMakeLists.txt
+++ b/hueplusplus/test/CMakeLists.txt
@@ -29,13 +29,56 @@ if (CMAKE_VERSION VERSION_LESS 2.8.11)
     include_directories("${gtest_SOURCE_DIR}/include" EXCLUDE_FROM_ALL)
 endif()
 
+# get all test sources. Maybe use something else than GLOB
 file(GLOB TEST_SOURCES test_*)
 
-add_executable(HuePlusPlus_Test ${TEST_SOURCES} ${hueplusplus_SOURCES})
-target_link_libraries(HuePlusPlus_Test gtest gmock)
+add_executable(test_HuePlusPlus ${TEST_SOURCES} ${hueplusplus_SOURCES})
+target_link_libraries(test_HuePlusPlus gtest gmock)
 # prevent Main.cpp from defining main()
-target_compile_definitions(HuePlusPlus_Test PUBLIC MAIN_CPP_NO_MAIN_FUNCTION)
-target_include_directories(HuePlusPlus_Test PUBLIC ${GTest_INCLUDE_DIRS})
-target_include_directories(HuePlusPlus_Test PUBLIC ${HuePlusPlus_INCLUDE_DIR})
-set_property(TARGET HuePlusPlus_Test PROPERTY CXX_STANDARD 14)
-set_property(TARGET HuePlusPlus_Test PROPERTY CXX_EXTENSIONS OFF)
+target_compile_definitions(test_HuePlusPlus PUBLIC MAIN_CPP_NO_MAIN_FUNCTION)
+target_include_directories(test_HuePlusPlus PUBLIC ${GTest_INCLUDE_DIRS})
+target_include_directories(test_HuePlusPlus PUBLIC ${HuePlusPlus_INCLUDE_DIR})
+set_property(TARGET test_HuePlusPlus PROPERTY CXX_STANDARD 14)
+set_property(TARGET test_HuePlusPlus PROPERTY CXX_EXTENSIONS OFF)
+add_custom_target("unittest"
+
+    # make test_HuePlusPlus executable
+    COMMAND "make" test_HuePlusPlus
+
+    # Run the executable
+    COMMAND "${CMAKE_BINARY_DIR}/hueplusplus/test/test_HuePlusPlus"
+)
+
+# GCov
+include(CodeCoverage.cmake)
+add_executable(testcov_HuePlusPlus ${TEST_SOURCES} ${hueplusplus_SOURCES})
+target_link_libraries(testcov_HuePlusPlus gtest gmock)
+# prevent Main.cpp from defining main()
+target_compile_definitions(testcov_HuePlusPlus PUBLIC MAIN_CPP_NO_MAIN_FUNCTION)
+target_include_directories(testcov_HuePlusPlus PUBLIC ${GTest_INCLUDE_DIRS})
+target_include_directories(testcov_HuePlusPlus PUBLIC ${HuePlusPlus_INCLUDE_DIR})
+set_property(TARGET testcov_HuePlusPlus PROPERTY CXX_STANDARD 14)
+set_property(TARGET testcov_HuePlusPlus PROPERTY CXX_EXTENSIONS OFF)
+# this will be already done by APPEND_COVERAGE_COMPILER_FLAGS()
+#set_target_properties(
+#        testcov_HuePlusPlus PROPERTIES
+#        COMPILE_FLAGS "-O0 -g -fprofile-arcs -ftest-coverage"
+#)
+# Normally this would be -lgcov, but on mac only -Lgcov works
+#set_target_properties(
+#        testcov_HuePlusPlus PROPERTIES
+#        LINK_FLAGS "-O0 -g -Lgcov -fprofile-arcs -ftest-coverage"
+#)
+set(COVERAGE_EXCLUDES
+    '/usr/*'           # unix
+    '*/build/*'
+    '*/json*'
+    '*/test/*'
+    '*/v1/*'           # iOS
+)
+APPEND_COVERAGE_COMPILER_FLAGS()
+SETUP_TARGET_FOR_COVERAGE(
+        NAME "coveragetest"
+        EXECUTABLE testcov_HuePlusPlus
+        DEPENDENCIES testcov_HuePlusPlus
+)
