--- a/hueplusplus/test/CMakeLists.txt
+++ b/hueplusplus/test/CMakeLists.txt
@@ -2,13 +2,15 @@
 configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
 execute_process(COMMAND ${CMAKE_COMMAND} -G ${CMAKE_GENERATOR} .
     RESULT_VARIABLE result
-WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/hueplusplus/test/googletest-download" )
+    WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/hueplusplus/test/googletest-download"
+)
 if(result)
     message(FATAL_ERROR "CMake step for googletest failed: ${result}")
 endif()
 execute_process(COMMAND "${CMAKE_COMMAND}" --build .
     RESULT_VARIABLE result
-WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/hueplusplus/test/googletest-download" )
+    WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/hueplusplus/test/googletest-download"
+)
 if(result)
     message(FATAL_ERROR "Build step for googletest failed: ${result}")
 endif()
@@ -20,7 +22,8 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 # Add googletest directly to our build. This defines
 # the gtest and gtest_main targets.
 add_subdirectory(${CMAKE_BINARY_DIR}/googletest-src EXCLUDE_FROM_ALL
-                 ${CMAKE_BINARY_DIR}/googletest-build EXCLUDE_FROM_ALL)
+                 ${CMAKE_BINARY_DIR}/googletest-build EXCLUDE_FROM_ALL
+)
 
 # The gtest/gtest_main targets carry header search path
 # dependencies automatically when using CMake 2.8.11 or
@@ -29,9 +32,14 @@ if (CMAKE_VERSION VERSION_LESS 2.8.11)
     include_directories("${gtest_SOURCE_DIR}/include" EXCLUDE_FROM_ALL)
 endif()
 
-# get all test sources. Maybe use something else than GLOB
-file(GLOB TEST_SOURCES test_*)
+# define all test sources
+set(TEST_SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_Main.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_Hue.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_UPnP.cpp
+)
 
+# test executable
 add_executable(test_HuePlusPlus ${TEST_SOURCES} ${hueplusplus_SOURCES})
 target_link_libraries(test_HuePlusPlus gtest gmock)
 # prevent Main.cpp from defining main()
@@ -40,16 +48,15 @@ target_include_directories(test_HuePlusPlus PUBLIC ${GTest_INCLUDE_DIRS})
 target_include_directories(test_HuePlusPlus PUBLIC ${HuePlusPlus_INCLUDE_DIR})
 set_property(TARGET test_HuePlusPlus PROPERTY CXX_STANDARD 14)
 set_property(TARGET test_HuePlusPlus PROPERTY CXX_EXTENSIONS OFF)
+# add custom target to make it simple to run the tests
 add_custom_target("unittest"
-
     # make test_HuePlusPlus executable
     COMMAND "make" test_HuePlusPlus
-
     # Run the executable
     COMMAND "${CMAKE_BINARY_DIR}/hueplusplus/test/test_HuePlusPlus"
 )
 
-# Check for prerequisites
+# Check for coverage test prerequisites
 find_program( GCOV_PATH gcov )
 find_program( LCOV_PATH lcov )
 
@@ -74,6 +81,7 @@ if(LCOV_PATH AND GCOV_PATH)
     #        testcov_HuePlusPlus PROPERTIES
     #        LINK_FLAGS "-O0 -g -Lgcov -fprofile-arcs -ftest-coverage"
     #)
+    # exclude some special files we do not want to profile
     set(COVERAGE_EXCLUDES
         '/usr/*'           # unix
         '*/build/*'
