Add a whole load of tests so everything important is tested now - add tests for ExtendedColorHueStrategy - add tests for ExtendedColorTemperatureStrategy - add missing test for HueLight - add tests for IHttpHandler - add tests for SimpleBrightnessStrategy - add tests for SimpleColorHueStrategy - add tests for SimpleColorTemperatureStrategy

--- a/hueplusplus/test/CMakeLists.txt
+++ b/hueplusplus/test/CMakeLists.txt
@@ -34,9 +34,15 @@ endif()
 
 # define all test sources
 set(TEST_SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_ExtendedColorHueStrategy.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_ExtendedColorTemperatureStrategy.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_Hue.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_HueLight.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_IHttpHandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_Main.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_SimpleBrightnessStrategy.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_SimpleColorHueStrategy.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_SimpleColorTemperatureStrategy.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_UPnP.cpp
 )
 
