Make IHttpHandler purely virtual - add new class BaseHttpHandler - rename lin- and winHttpHandler to Lin- and WinHttpHandler - print error messages to std::cerr

--- a/hueplusplus/test/CMakeLists.txt
+++ b/hueplusplus/test/CMakeLists.txt
@@ -34,11 +34,11 @@ endif()
 
 # define all test sources
 set(TEST_SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_BaseHttpHandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_ExtendedColorHueStrategy.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_ExtendedColorTemperatureStrategy.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_Hue.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_HueLight.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_IHttpHandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_Main.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_SimpleBrightnessStrategy.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_SimpleColorHueStrategy.cpp
