Export include directory with cmake library - Now the library can just be included with add_subdirectory, no need to configure include path

--- a/hueplusplus/CMakeLists.txt
+++ b/hueplusplus/CMakeLists.txt
@@ -26,10 +26,19 @@ if(UNIX)
     )
 endif()
 
+
+# Set global includes BEFORE adding any targets for legacy CMake versions
+if(CMAKE_VERSION VERSION_LESS 2.8.12)
+	include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")
+endif()
+
 # hueplusplus shared library
 add_library(hueplusplusshared SHARED ${hueplusplus_SOURCES})
 set_property(TARGET hueplusplusshared PROPERTY CXX_STANDARD 14)
 set_property(TARGET hueplusplusshared PROPERTY CXX_EXTENSIONS OFF)
+if (NOT CMAKE_VERSION VERSION_LESS 2.8.12)
+    target_include_directories(hueplusplusshared PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
+endif()
 install(TARGETS hueplusplusshared DESTINATION lib)
 
 # hueplusplus static library
@@ -37,6 +46,9 @@ add_library(hueplusplusstatic STATIC ${hueplusplus_SOURCES})
 set_property(TARGET hueplusplusstatic PROPERTY CXX_STANDARD 14)
 set_property(TARGET hueplusplusstatic PROPERTY CXX_EXTENSIONS OFF)
 install(TARGETS hueplusplusstatic DESTINATION lib)
+if (NOT CMAKE_VERSION VERSION_LESS 2.8.12)
+    target_include_directories(hueplusplusstatic PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
+endif()
 install(FILES ${hueplusplus_HEADERS} DESTINATION include/hueplusplus)
 
 # Export the package for use from the build-tree
