--- a/hueplusplus/CMakeLists.txt
+++ b/hueplusplus/CMakeLists.txt
@@ -3,6 +3,7 @@ set(hueplusplus_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/ExtendedColorHueStrategy.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ExtendedColorTemperatureStrategy.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Hue.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/HueCommandAPI.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/HueLight.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/jsoncpp.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/SimpleBrightnessStrategy.cpp
