Implement retry in HueCommandAPI, add tests. - On errors connection reset or timed out, waits and retries once

--- a/hueplusplus/test/CMakeLists.txt
+++ b/hueplusplus/test/CMakeLists.txt
@@ -39,6 +39,7 @@ set(TEST_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/test_ExtendedColorTemperatureStrategy.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_Hue.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_HueLight.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_HueCommandAPI.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_Main.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_SimpleBrightnessStrategy.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_SimpleColorHueStrategy.cpp
