Run coveragetest with travis ci and publish results on codecov - add travis.yml with crude implementation - fix issue with COVERAGE_EXCLUDES removing all files and travis ci

--- a/hueplusplus/test/CMakeLists.txt
+++ b/hueplusplus/test/CMakeLists.txt
@@ -90,7 +90,7 @@ if(LCOV_PATH AND GCOV_PATH)
     # exclude some special files we do not want to profile
     set(COVERAGE_EXCLUDES
         '/usr/*'           # unix
-        '*/build/*'
+        '*/hueplusplus/build/*'
         '*/json*'
         '*/test/*'
         '*/v1/*'           # iOS
