--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
     # Misc
     - RUN_TESTS=true
     - COVERAGE=false
+    - PATH=${DEPS_DIR}/cmake/bin:${PATH}
 
 matrix:
   include:
@@ -42,7 +43,7 @@ install:
     - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-5 90
     # Download and install recent cmake
     - if [[ ${TRAVIS_OS_NAME} == "linux" ]]; then
-        CMAKE_URL="http://www.cmake.org/files/v3.5/cmake-3.5.1-Linux-x86_64.tar.gz";
+        CMAKE_URL="https://cmake.org/files/v3.7/cmake-3.7.0-Linux-x86_64.tar.gz";
         mkdir -p ${DEPS_DIR}/cmake;
         travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C ${DEPS_DIR}/cmake;
         export PATH=${DEPS_DIR}/cmake/bin:${PATH};
@@ -54,6 +55,7 @@ install:
     - echo ${CXX}
     - ${CXX} --version
     - ${CXX} -v
+    - cmake --version
     - lcov --version
 
 script:
