Add exception with line info when api calls fail. The Hue API may return errors when api calls fail, such as when there is an incorrect username. Now these are thrown as exceptions.

--- a/hueplusplus/CMakeLists.txt
+++ b/hueplusplus/CMakeLists.txt
@@ -4,6 +4,7 @@ set(hueplusplus_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/ExtendedColorTemperatureStrategy.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Hue.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/HueCommandAPI.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/HueException.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/HueLight.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/SimpleBrightnessStrategy.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/SimpleColorHueStrategy.cpp
