--- a/hueplusplus/test/CMakeLists.txt
+++ b/hueplusplus/test/CMakeLists.txt
@@ -1,3 +1,6 @@
+# Set cmake cxx standard to 14
+set(CMAKE_CXX_STANDARD 14)
+
 # Download and unpack googletest at configure time
 configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
 execute_process(COMMAND ${CMAKE_COMMAND} -G ${CMAKE_GENERATOR} .
