Add message to HueException, change HttpHandler exceptions.

--- a/hueplusplus/CMakeLists.txt
+++ b/hueplusplus/CMakeLists.txt
@@ -1,6 +1,7 @@
 file(GLOB hueplusplus_HEADERS include/*.h include/*.hpp)
 set(hueplusplus_SOURCES
-    ${CMAKE_CURRENT_SOURCE_DIR}/ExtendedColorHueStrategy.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/BaseHttpHandler.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/ExtendedColorHueStrategy.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ExtendedColorTemperatureStrategy.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Hue.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/HueCommandAPI.cpp
