Fix doxygen errors.

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ matrix:
            # Misc
            - python-yaml
            - doxygen
+           - graphviz
          sources: &sources
            - ubuntu-toolchain-r-test
            - llvm-toolchain-trusty-6.0
