--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -76,11 +76,11 @@ mark_as_advanced(LCOV_PATH)
 if(LCOV_PATH AND GCOV_PATH)
     # GCov
     include(CodeCoverage.cmake)
-    add_executable(testcov_HuePlusPlus ${TEST_SOURCES})
+    add_executable(testcov_HuePlusPlus ${TEST_SOURCES} ${hueplusplus_SOURCES})
+    target_include_directories(testcov_HuePlusPlus PUBLIC "${PROJECT_SOURCE_DIR}/include")
     target_compile_features(testcov_HuePlusPlus PUBLIC cxx_std_14)
 	set_property(TARGET testcov_HuePlusPlus PROPERTY CXX_EXTENSIONS OFF)
 
-	target_link_libraries(testcov_HuePlusPlus PUBLIC hueplusplusstatic)
 	target_link_libraries(testcov_HuePlusPlus PUBLIC gtest gmock)
 	target_include_directories(testcov_HuePlusPlus PUBLIC ${GTest_INCLUDE_DIRS})
     # this will be already done by APPEND_COVERAGE_COMPILER_FLAGS()
