Add Schedule class to handle schedule requests.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,11 +9,12 @@ set(hueplusplus_SOURCES
 	HueDeviceTypes.cpp
     HueException.cpp
     HueLight.cpp
+    Schedule.cpp
     SimpleBrightnessStrategy.cpp
     SimpleColorHueStrategy.cpp
     SimpleColorTemperatureStrategy.cpp
     StateTransaction.cpp
-    "TimePattern.cpp"
+    TimePattern.cpp
     UPnP.cpp
     Utils.cpp)
 
