--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -44,6 +44,7 @@ set(TEST_SOURCES
     test_SimpleColorHueStrategy.cpp
     test_SimpleColorTemperatureStrategy.cpp
     test_UPnP.cpp
+    test_Schedule.cpp
     test_StateTransaction.cpp
     test_TimePattern.cpp)
 
