Add Scene functionality.
Does not yet have a way to create LightStates for Scenes.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ set(hueplusplus_SOURCES
 	HueDeviceTypes.cpp
     HueException.cpp
     HueLight.cpp
+    Scene.cpp
     Schedule.cpp
     SimpleBrightnessStrategy.cpp
     SimpleColorHueStrategy.cpp
