Add color conversion from RGB to XY. Bounds to closest representable color of the gamut.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,8 +16,9 @@ set(hueplusplus_SOURCES
     SimpleColorTemperatureStrategy.cpp
     StateTransaction.cpp
     TimePattern.cpp
+    Units.cpp
     UPnP.cpp
-    Utils.cpp)
+    Utils.cpp )
 
 # on windows we want to compile the WinHttpHandler
 if(WIN32)
