Rename Units to ColorUnits, use XYBrightness for color.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,7 +16,7 @@ set(hueplusplus_SOURCES
     SimpleColorTemperatureStrategy.cpp
     StateTransaction.cpp
     TimePattern.cpp
-    Units.cpp
+    "ColorUnits.cpp"
     UPnP.cpp
     Utils.cpp )
 
