--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -40,7 +40,7 @@ set(TEST_SOURCES
     test_ColorUnits.cpp
     test_ExtendedColorHueStrategy.cpp
     test_ExtendedColorTemperatureStrategy.cpp
-	test_Group.cpp
+    test_Group.cpp
     test_HueCommandAPI.cpp
     test_Light.cpp
     test_LightFactory.cpp
@@ -93,10 +93,11 @@ if(LCOV_PATH AND GCOV_PATH)
     add_executable(testcov_HuePlusPlus ${TEST_SOURCES} ${hueplusplus_SOURCES})
     target_include_directories(testcov_HuePlusPlus PUBLIC "${PROJECT_SOURCE_DIR}/include")
     target_compile_features(testcov_HuePlusPlus PUBLIC cxx_std_14)
-	set_property(TARGET testcov_HuePlusPlus PROPERTY CXX_EXTENSIONS OFF)
+    set_property(TARGET testcov_HuePlusPlus PROPERTY CXX_EXTENSIONS OFF)
 
-	target_link_libraries(testcov_HuePlusPlus PUBLIC gtest gmock)
-	target_include_directories(testcov_HuePlusPlus PUBLIC ${GTest_INCLUDE_DIRS})
+    target_link_libraries(testcov_HuePlusPlus PRIVATE mbedtls)
+    target_link_libraries(testcov_HuePlusPlus PUBLIC gtest gmock)
+    target_include_directories(testcov_HuePlusPlus PUBLIC ${GTest_INCLUDE_DIRS})
     # this will be already done by APPEND_COVERAGE_COMPILER_FLAGS()
     #set_target_properties(
     #        testcov_HuePlusPlus PROPERTIES
