--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ language: generic
 env:
   global:
     # Ubuntu version
-    - LINUX_DIST=xenial
+    - LINUX_DIST=bionic
     - DEPS_DIR=${TRAVIS_BUILD_DIR}/deps
     # compiler settings
     - COMPILER_NAME=gcc
-    - CXX=g++-9
-    - CC=gcc-9
+    - CXX=g++
+    - CC=gcc
     # Misc
     - RUN_TESTS=true
     - COVERAGE=false
@@ -17,7 +17,7 @@ env:
 matrix:
   include:
     - os: linux
-      dist: xenial
+      dist: bionic
       sudo: true
       compiler: gcc
       addons:
@@ -25,14 +25,8 @@ matrix:
          packages:
            # Misc
            - python-yaml
-           - gcc-5.5
-           - g++-5.5
            - doxygen
            - graphviz
-         sources: &sources
-           - ubuntu-toolchain-r-test
-           - llvm-toolchain-xenial-6.0
-
 before_install:
     # Combine global build options with OS/compiler-dependent options
     - export CMAKE_OPTIONS=${CMAKE_OPTIONS}" "${ENV_CMAKE_OPTIONS}
@@ -42,7 +36,7 @@ before_install:
 
 install:
     # CodeCov
-    - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-5 90
+    - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-7 90
     # we have to build lcov on our own, because it is not possible to install lcov-1.13 with apt
     - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.13.orig.tar.gz && tar xf lcov_1.13.orig.tar.gz && make -C lcov-1.13 "PREFIX=${HOME}/.local" install && export PATH="${PATH}:${HOME}/.local/bin";
     # show info
