--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ endif()
 
 # options to set
 option(hueplusplus_TESTS "Build tests" OFF)
-option(hueplusplus_SAMPLES "Build examples" OFF)
+option(hueplusplus_EXAMPLES "Build examples" OFF)
 
 option(CLANG_TIDY_FIX "Perform fixes for Clang-Tidy" OFF)
 find_program(CLANG_TIDY_EXE NAMES "clang-tidy" DOC "Path to clang-tidy executable")
@@ -100,6 +100,6 @@ if(hueplusplus_TESTS)
     add_subdirectory("test")
 endif()
 
-if(hueplusplus_SAMPLES)
+if(hueplusplus_EXAMPLES)
 	add_subdirectory("examples")
 endif()
